--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -2,6 +2,7 @@
   box-sizing: border-box; }
 
 body {
+	background-color:black;
   padding: 0;
   margin: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -10,7 +11,7 @@ body {
   color: #606c71; }
 
 a {
-  color: #1e6bb8;
+  color: white;
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
@@ -57,7 +58,7 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-image: url("../images/car.png"); }
 
 @media screen and (min-width: 64em) {
   .page-header {
